feat: adicionando imagem

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <img src="imagem-em-lente-convexa.webp"></img>
     Aqui vai o código HTML que fará seu site aparecer.
   </body>
 </html>
